[package]
name = "drone-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum REST API server for drone convoy management"

[[bin]]
name = "drone-api"
path = "src/main.rs"

[dependencies]
drone-core = { path = "../drone-core" }
# drone-cv = { path = "../drone-cv" }
drone-db = { path = "../drone-db" }
drone-websocket = { path = "../drone-websocket" }
drone-telemetry = { path = "../drone-telemetry" }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time & UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
