[package]
name = "drone-cv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenCV computer vision module for drone halo detection and tracking"

[dependencies]
drone-core = { path = "../drone-core" }

# OpenCV bindings
opencv = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }
uuid = { workspace = true }

# Async utilities
async-trait = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
