[package]
name = "drone-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "libp2p mesh networking for drone-to-drone communication"

[dependencies]
drone-core = { path = "../drone-core" }

# P2P networking
libp2p = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time & UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
