[package]
name = "drone-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Real-time WebSocket server for drone telemetry streaming"

[dependencies]
drone-core = { path = "../drone-core" }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time & UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
